# voxl

./: .gitmodules  CMakeLists.txt  README.md
include/: application.h  camera.h  chunk.h  cube.h  mesh.h  player.h  renderer.h  shader.h  skybox.h  subsystem.h  texture.h  thread.h  voxl.h  world.h
res/shaders/: default_frag.glsl  default_vert.glsl  highlight_frag.glsl  highlight_vert.glsl  sky_frag.glsl  sky_vert.glsl
src/: application.cpp  camera.cpp  chunk.cpp  cube.cpp  main.cpp  mesh.cpp  player.cpp  renderer.cpp  shader.cpp  skybox.cpp  texture.cpp  thread.cpp  world.cpp
